enable cores and updated frontend with responsiveness

--- a/ecom_frontend/public/index.html
+++ b/ecom_frontend/public/index.html
@@ -18,6 +18,9 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <!-- fontawesome codn -->
+  <script src="https://kit.fontawesome.com/8ce49de8d6.js" crossorigin="anonymous"></script>
+
   <!--
       bootstrap cdn
     -->
